# django-startproject-template

./: .gitignore  CNAME  Procfile  README.md  _config.yml  gunicorn.sh  passenger_wsgi.py  pyproject.toml  requirements-dev.txt  requirements.txt
accounts/: urls.py  views.py
accounts/templates/accounts/: profile.html  signup.html
contrib/: clear_migrations.py  clear_migrations.sh  docker-compose.yml  env-sample.env  gen_basic_conf.py  secret_key_gen.py
home/: sitemap.py  views.py
home/templates/home/: index.html
project_name/: settings.py  urls.py
static/base/css/: base-min.css  base.css  classless-min.css  themes-min.css
static/base/js/: base-min.js  base.js
templates/: 400.html  403.html  404.html  500.html
templates/base/: base.html
templates/base/components/: footer.html  google.html  navbar.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
